feat: header correction-(wip)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header class="header">
         <div class="container">
-            <div class="row is-space-between">
+            <div class="row">
                 <div class="logo">logo</div>
                 <nav class="nav-bar">
                     <ul class="links">
