feat: first section blue background - pink container

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
 
         <section class="section">
-            <div class="container"></div>
+            <div class="hero-container"></div>
                 <div class="row"></div>
         </section>
 
