feat: add main section

--- a/index.html
+++ b/index.html
@@ -31,24 +31,40 @@
 
     <main>
 
-        <section class="section">
+        <section class="blue">
             <div class="hero-container"></div>
-                <div class="row"></div>
         </section>
 
-        <section class="section">
-            <div class="container"></div>
-            <div class="row"></div>
+        <section class="white">
+            <div class="container">
+                <div class="two-col">
+                    <div class="col-70"></div>
+                    <div class="col-30"></div>
+                </div>
+            </div>
         </section>
 
-        <section class="section">
-            <div class="container"></div>
-            <div class="row"></div>
+        <section class="grey">
+            <div class="container">
+                <div class="two-col">
+                    <div class="col-30"></div>
+                    <div class="col-70"></div>
+                </div>
+            </div>
+            
         </section>
 
-        <section class="section">
-            <div class="container"></div>
-            <div class="row"></div>
+        <section class="white">
+            <div class="container">
+                <div class="two-col">
+                    <div class="col-70"></div>
+                    <div class="col-30"></div>
+                </div>
+            </div>
+            
+        </section>
+        <section class="grey">
+            <div class="container green"></div>
         </section>
 
     </main>
