feat: add footer (wip)

--- a/index.html
+++ b/index.html
@@ -70,9 +70,27 @@
     </main>
 
     <footer class="footer">
-        <div class="container"></div>
+        <div class="container">
+            <div class="five-col">
+                <div class="col-40"></div>
+                <div class="col-15"></div>
+                <div class="col-15"></div>
+                <div class="col-15"></div>
+                <div class="col-15"></div>
+            </div>
+            
+        </div>
 
     </footer>
+       <div class="container">
+        <div class="flex">
+            <div class="item1">logo</div>
+            <div class="item1">Bottone</div>
+
+
+        </div>
+       </div>
+     
 
 
 </body>
